# fixedlength-format-parser-rs

./: Cargo.toml  README.md
.github/workflows/: rust-checks.yml  rust-publish.yml
src/: lib.rs
