[package]
name = "fixedlength-format-parser"
version = "0.1.0"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
license = "MIT"
description = "Build parsers for files with fixed length, record-like fields."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.39"
